aggiunta nav top

--- a/index.html
+++ b/index.html
@@ -13,8 +13,81 @@
 <body>
     
     <!--HEADER START-->
-    <header></header>
+    <header>
+
+        <!--Nav top START-->
+          
+        <nav class="nav_top">
+
+            <div class="wrapper clearfix">
+
+                <div class="col lang_contact">
+
+                    <ul class="menu">
+                        <li> 
+                            <a href="#"> <i class="fas fa-globe-europe"></i> English <i class="fas fa-chevron-down"></i></a>
+                        </li>
+
+                        <li>
+                            <span class="border_menu"></span>
+                        </li>
+
+                        <li>
+                            <a href="#">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+
+
+
+
+                <div class="col search_login ">
+
+                    <ul class="menu right_align">
+
+                        <li>
+                            <a href="#"><i class="fas fa-search search_icon"></i></a>
+                        </li>
+
+                        <li> 
+                            <a class="login_button" href="#">Log in</a>
+                        </li>
+
+                        <li>
+                            <a class="getfree button" href="#">GetHUbspotFree</a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+
+        </nav>
+        <!--Nav top end-->
+
+
+
+        <!--Nav bot start-->
+
+        <nav class="nav_bottom"></nav>
+
+        <!--Nav bot end-->
+
+
+
+    </header>
     <!--HEADER END-->
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <!--MAIN START-->
