aggiunta nav bottom

--- a/index.html
+++ b/index.html
@@ -68,11 +68,54 @@
 
         <!--Nav bot start-->
 
-        <nav class="nav_bottom"></nav>
+        <nav class="nav_bottom">
+    
+            <div class="wrapper clearfix">
+
+                <div class="col logo_nav">
+
+                    <div class="logo_container">
+                        
+                        <img src="img/logo.svg" alt="logo">
+
+                    </div> 
+
+                </div>
+
+
+                <div class="col site_search">
+
+                    <ul class="menu right_align">
+
+                        <li>
+                            <a href="#">Software</a>
+                        </li>
+
+                        <li>
+                            <a href="#">Pricing</a>
+                        </li>
+
+                        <li>
+                            <a href="#">Resources</a>
+                        </li>
+
+                        <li>
+                            <a href="#">Partners</a>
+                        </li>
+
+                        <li>
+                            <a href="#">About</a>
+                        </li>
+
+                    </ul>
+
+                </div>
+
+            </div>
+
+        </nav>
 
         <!--Nav bot end-->
-
-
 
     </header>
     <!--HEADER END-->
