--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <ul class="menu right_align">
 
                         <li>
-                            <a href="#">Software</a>
+                            <a href="#">Software <i class="fas fa-chevron-down"></i></a>
                         </li>
 
                         <li>
@@ -96,15 +96,15 @@
                         </li>
 
                         <li>
-                            <a href="#">Resources</a>
+                            <a href="#">Resources <i class="fas fa-chevron-down"></i></a>
                         </li>
 
                         <li>
-                            <a href="#">Partners</a>
+                            <a href="#">Partners <i class="fas fa-chevron-down"></i></a>
                         </li>
 
                         <li>
-                            <a href="#">About</a>
+                            <a href="#">About <i class="fas fa-chevron-down"></i></a>
                         </li>
 
                     </ul>
