--- a/index.html
+++ b/index.html
@@ -139,27 +139,19 @@
         </div>
         <!--Jumbotron end-->
 
-        
-  
-
     </header>
     <!--HEADER END-->
 
+    <!--Divider-->
+    <div class="divider"></div>
+    <!--Divider-->
 
-
-
-
-
-
-
-
-
-
-
+    
 
 
     <!--MAIN START-->
-    <main></main>
+    <main>
+    </main>
     <!--MAIN END-->
 
     <!--FOOTER START-->
