--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
                     <img src="img/sales-professional-illustration.svg" alt="">
 
                     <div>
-                        <h3 class="txt_align">Marketing hub</h3>
+                        <h3 class="txt_align">Sales Hub</h3>
   
-                        <p class="txt txt_align">Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                        <p class="txt txt_align">Time-saving sales software that helps you gett deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
   
                         <hr>
   
@@ -286,15 +286,15 @@
                           <ul class="menu">
                               
                               <li>
-                                  <a href="#"> <i class="fas fa-check-circle"></i>Lead Generation</a>
+                                  <a href="#"> <i class="fas fa-check-circle"></i>Email tracking</a>
                               </li>
   
                               <li>
-                                  <a href="#"> <i class="fas fa-check-circle"></i>Marketing Automation</a>
+                                  <a href="#"> <i class="fas fa-check-circle"></i>Meeting scheduling</a>
                               </li>
   
                               <li>
-                                  <a href="#"><i class="fas fa-check-circle"></i>Analytics</a>
+                                  <a href="#"><i class="fas fa-check-circle"></i>Email automation</a>
                               </li>
                           </ul>
   
@@ -317,9 +317,9 @@
                     <img src="img/service-hub-illustration.svg" alt="marketing">
 
                     <div>
-                      <h3 class="txt_align">Marketing hub</h3>
+                      <h3 class="txt_align">Service Hub</h3>
 
-                      <p class="txt txt_align">Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                      <p class="txt txt_align">Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.</p>
 
                       <hr>
 
@@ -331,15 +331,15 @@
                         <ul class="menu">
                             
                             <li>
-                                <a href="#"> <i class="fas fa-check-circle"></i>Lead Generation</a>
+                                <a href="#"> <i class="fas fa-check-circle"></i>Tickets</a>
                             </li>
 
                             <li>
-                                <a href="#"> <i class="fas fa-check-circle"></i>Marketing Automation</a>
+                                <a href="#"> <i class="fas fa-check-circle"></i>Customer feedback</a>
                             </li>
 
                             <li>
-                                <a href="#"><i class="fas fa-check-circle"></i>Analytics</a>
+                                <a href="#"><i class="fas fa-check-circle"></i>Knowledge Base</a>
                             </li>
                         </ul>
 
